Commit > nach Anpassung des DB-Zugriffs > Erstellung einer ersten Eingabe-Oberfläche > und einer ersten Event-Verarbeitung mit Button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">SQLiteProjekt</string>
     <string name="action_settings">Settings</string>
+    <string name="editText_hint_vorname">Vorname</string>
+    <string name="editText_hint_nachname">Nachname</string>
+    <string name="editText_hint_geburtsdatum">Geburtstag</string>
+    <string name="button_add_user">+</string>
+    <string name="editText_errorMessage">Fehler bei der Eingabe</string>
+
 </resources>
