--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="editText_hint_vorname">Vorname</string>
     <string name="editText_hint_nachname">Nachname</string>
-    <string name="editText_hint_geburtsdatum">Geburtstag</string>
+    <string name="editText_hint_geburtsdatum">Geburtstag \n (dd-mm-jjjj)</string>
     <string name="button_add_user">+</string>
     <string name="editText_errorMessage">Fehler bei der Eingabe</string>
 
